--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       # Discord Bot Configuration
       - DISCORD_WEBHOOK_URL=${DISCORD_WEBHOOK_URL}
       - DISCORD_THREAD_ID=${DISCORD_THREAD_ID:-}
-      - MESH_REGION=${MESH_REGION:-seattle}
+      - MESH_REGION=${MESH_REGION:-Louisiana}
       - POLL_INTERVAL=${POLL_INTERVAL:-1000}
       - MAX_ROWS_PER_POLL=${MAX_ROWS_PER_POLL:-50}
       - PRIVATE_KEYS=${PRIVATE_KEYS:-}
