--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@yornaath/batshit": "^0.10.1",
     "aes-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
-    "clickhouse": "^2.6.0",
+    "clickhouse": "^1.2.88888888",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
-    "next": "15.3.8",
+    "next": "^15.3.8",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
